--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yashin V.S</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col-8">
                 <h2>My website. TY for donates! XD</h2>
                 <div class="col-4">
                     <div class="row">
-                        <img src="static/cat1.jpeg">
+                        <img class="img_size" src="static/cat1.jpeg" alt="cat">
+                    </div>
+                    <div class="row">
+                        <p> Это котик </p>
                     </div>
                 </div>
             </div>
